ingress/port-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grishma-portfolio-deployment
  namespace: ing
  labels:
    app: grishma-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grishma-portfolio
  template:
    metadata:
      labels:
        app: grishma-portfolio
    spec:
      containers:
        - name: mypersonalportfolio
          image: grishma2477/mypersonalportfolio:01
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: grishma-portfolio-service
  namespace: ing
spec:
  selector:
    app: grishma-portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
