ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grishma-ingress
  namespace: ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    # - host: grishma.dev   # --> if its given, its only accept request from this host
    - http:
        paths:
          - path: /portfolio
            pathType: Prefix
            backend:
              service:
                name: grishma-portfolio-service
                port:
                  number: 80

          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3200

          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: react-vite-service
                port:
                  number: 80

          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: react-vite-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: grishma-portfolio-service
                port:
                  number: 80
